creted filled GoldCard methods